source/blender/draw/engines/basic/basic_engine.h
@@ -24,6 +24,5 @@
 #define __BASIC_ENGINE_H__
 
 extern DrawEngineType draw_engine_basic_type;
-extern RenderEngineType DRW_engine_viewport_basic_type;
 
 #endif /* __BASIC_ENGINE_H__ */
