source/blender/draw/engines/basic/shaders/conservative_depth_frag.glsl
@@ -1,0 +1,5 @@
+
+void main()
+{
+  /* Passthrough shader. */
+}
